--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
 </head>
 <body>
     <!--============= calender part start here  ==============-->
-    <section>
-        <div class="calender_mani"></div>
+    <section id="calender">
+        <div class="calender_mani">
+            <div class="left">
+                <p id="date">01</p>
+                <span id="day">sunday</span>
+            </div>
+            <div class="right">
+                <p id="month">january</p>
+                <span id="year">2024</span>
+            </div>
+        </div>
     </section>
     <!--============= calender part end here  ==============-->
     
